# scheme-haskell-48h

./: .gitignore  LICENSE  Main.hs  MainTest.hs  default.nix  scheme.cabal  stack.yaml  stdlib.scm
app/: Main.hs
src/Scheme/: Eval.hs  Parser.hs  Types.hs  Utils.hs
test/: Spec.hs
